update(cs50): Update week 1 notes

--- a/courses/cs50/notes/w1.md
+++ b/courses/cs50/notes/w1.md
@@ -8,3 +8,7 @@ A few things to note as well:
 * CLI - **C**ommand **L**ine **I**nterface
 * I can now stop using `rm -r dir/` to remove directories in bash now as `rmdir dir/` would work just fine too
 * Use prototyping to make the compiler aware of functions which may exist further down the source code
+* Make use of the debugger!
+* Typecasting -- fancy term for describing conversion of values from one data type to another. Say, from String (`'18'`) to integer (`18`).
+* Sentinel values -- e.g. `\0`, singinifies termination of some sort.
+* Segmentation fault -- an error which occurs when one's program is trying to access memory which has not been allocated to it.
